; ModuleID = '/home/carl/AnghaBench/freebsd/sys/arm/ti/extr_ti_sdma.c_ti_sdma_get_channel_status.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/arm/ti/extr_ti_sdma.c_ti_sdma_get_channel_status.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ti_sdma_softc = type { i32 }

@ti_sdma_sc = common dso_local global %struct.ti_sdma_softc* null, align 8
@ENOMEM = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ti_sdma_get_channel_status(i32 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca %struct.ti_sdma_softc*, align 8
  %7 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32* %1, i32** %5, align 8
  %8 = load %struct.ti_sdma_softc*, %struct.ti_sdma_softc** @ti_sdma_sc, align 8
  store %struct.ti_sdma_softc* %8, %struct.ti_sdma_softc** %6, align 8
  %9 = load %struct.ti_sdma_softc*, %struct.ti_sdma_softc** %6, align 8
  %10 = icmp eq %struct.ti_sdma_softc* %9, null
  br i1 %10, label %11, label %13

11:                                               ; preds = %2
  %12 = load i32, i32* @ENOMEM, align 4
  store i32 %12, i32* %3, align 4
  br label %40

13:                                               ; preds = %2
  %14 = load %struct.ti_sdma_softc*, %struct.ti_sdma_softc** %6, align 8
  %15 = call i32 @TI_SDMA_LOCK(%struct.ti_sdma_softc* %14)
  %16 = load %struct.ti_sdma_softc*, %struct.ti_sdma_softc** %6, align 8
  %17 = getelementptr inbounds %struct.ti_sdma_softc, %struct.ti_sdma_softc* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = load i32, i32* %4, align 4
  %20 = shl i32 1, %19
  %21 = and i32 %18, %20
  %22 = icmp eq i32 %21, 0
  br i1 %22, label %23, label %27

23:                                               ; preds = %13
  %24 = load %struct.ti_sdma_softc*, %struct.ti_sdma_softc** %6, align 8
  %25 = call i32 @TI_SDMA_UNLOCK(%struct.ti_sdma_softc* %24)
  %26 = load i32, i32* @EINVAL, align 4
  store i32 %26, i32* %3, align 4
  br label %40

27:                                               ; preds = %13
  %28 = load %struct.ti_sdma_softc*, %struct.ti_sdma_softc** %6, align 8
  %29 = call i32 @TI_SDMA_UNLOCK(%struct.ti_sdma_softc* %28)
  %30 = load %struct.ti_sdma_softc*, %struct.ti_sdma_softc** %6, align 8
  %31 = load i32, i32* %4, align 4
  %32 = call i32 @DMA4_CSR(i32 %31)
  %33 = call i32 @ti_sdma_read_4(%struct.ti_sdma_softc* %30, i32 %32)
  store i32 %33, i32* %7, align 4
  %34 = load i32*, i32** %5, align 8
  %35 = icmp ne i32* %34, null
  br i1 %35, label %36, label %39

36:                                               ; preds = %27
  %37 = load i32, i32* %7, align 4
  %38 = load i32*, i32** %5, align 8
  store i32 %37, i32* %38, align 4
  br label %39

39:                                               ; preds = %36, %27
  store i32 0, i32* %3, align 4
  br label %40

40:                                               ; preds = %39, %23, %11
  %41 = load i32, i32* %3, align 4
  ret i32 %41
}

declare dso_local i32 @TI_SDMA_LOCK(%struct.ti_sdma_softc*) #1

declare dso_local i32 @TI_SDMA_UNLOCK(%struct.ti_sdma_softc*) #1

declare dso_local i32 @ti_sdma_read_4(%struct.ti_sdma_softc*, i32) #1

declare dso_local i32 @DMA4_CSR(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
